--- a/config/scene_objects.yaml
+++ b/config/scene_objects.yaml
@@ -1,2 +1,9 @@
 object_geometries: 
-  box: { box : [ 0.1, 1.5, 0.5 ], color: [ 255, 255, 0, 1 ] }
+  #box: { box : [ 0.05, 0.05, 0.7 ], color: [ 255, 255, 0, 1 ] }
+  #pose: [0, -0.63, -0.08, 0, 0, 0 ]
+  
+  #box: { box : [ 0.1, 0.3, 0.5 ], color: [ 255, 255, 0, 1 ] }
+  #pose: [0.1, -0.6, -0.05, 0, 0, 0 ]
+  
+  box: { box : [ 0.1, 0.1, 0.1 ], color: [ 255, 255, 0, 1 ] }
+  pose: [1, 3, 1, 0, 0, 0 ]
