--- a/package.xml
+++ b/package.xml
@@ -10,11 +10,13 @@
   <buildtool_depend>catkin</buildtool_depend>
   
   <depend>roscpp</depend>
+  <depend>rospy</depend>
   <depend>moveit_core</depend>
   <depend>rosdyn_core</depend>
   <depend>moveit_ros_planning_interface</depend>
   <depend>object_loader_msgs</depend>
   <depend>std_msgs_stamped</depend>
+  <depend>tf_conversions</depend>
   
   
   <export>
