--- a/config/drapebot_config.yaml
+++ b/config/drapebot_config.yaml
@@ -1,5 +1,8 @@
-  height   : 0.99;
-  slope    : 20;
-  midpoint : 0.25;
-  offset   : 0.01;
+target_pose: "target_pose"
+ee_pose: "end_effector"
+
+height   : 0.99;
+slope    : 20;
+midpoint : 0.25;
+offset   : 0.01;
   
